fixed navbar on mobile

--- a/app/assets/stylesheets/global/custom.css.scss
+++ b/app/assets/stylesheets/global/custom.css.scss
@@ -199,6 +199,8 @@ input {
  }
 
 .mobileappcontainer {
+  position:absolute;
+  z-index:-1;
   top: 60px;
   left: 0px;
 }
